# libgdx

./: .classpath  .cproject  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hgignore  .maven.settings  .project  .travis.yml  AUTHORS  AndroidManifest.xml  CC-LICENSE  CCLA.txt  CHANGES  CHANGES.orig  CLA.txt  CONTRIBUTING.md  CONTRIBUTORS  ISSUE_TEMPLATE.md  LICENSE  Log.java  README  README.md  THIRDPARTY  build-ios.xml  build-mac-ios.xml  build-new.xml  build-template-bullet.xml  build-template.xml  build.gradle  build.xml  compile-macosx.sh  convert-ikvm.xml  eclipse-formatter.xml  extractLatestSnapshot.sh  fetch.xml  find-apache.py  find-missing-apache-headers.py  gamedevelop.md  (+15 more)
extensions/gdx-audio/jni/libmpg123/: Makefile.am  dct36_3dnow.S  dct36_3dnowext.S  dct64_2.c  dct64_3dnow.S  dct64_3dnowext.S  dct64_i386.c  dct64_i486.c  dct64_neon.S  dct64_neon_float.S  dct64_sse_float.S  dct64_x86_64_float.S  debug.h  equalizer_3dnow.S  format.c  frame.c  frame.h  gapless.h  huffman.h  icy.c  icy.h  icy2utf8.c  id3.c  index.c  index.h  intsym.h  layer1.c  layer2.c  layer3.c  lfs_wrap.c  libmpg123.c  mangle.h  mpg123.h  mpg123lib_intern.h  optimize.c  optimize.h  parse.c  parse.h  readers.c  sample.h  (+22 more)
extensions/gdx-audio/jni/soundtouch/: COPYING.TXT  Makefile.am  README.html  bootstrap  configure-file-README.txt  configure.ac  createsrcpack  make-win.bat  soundtouch-1.4.pc.in  soundtouch.m4  soundtouch.pc.in
extensions/gdx-audio/jni/soundtouch/config/: README.TXT  am_include.mk
extensions/gdx-audio/jni/soundtouch/include/: BPMDetect.h  FIFOSampleBuffer.h  FIFOSamplePipe.h  Makefile.am  STTypes.h  SoundTouch.h
extensions/gdx-audio/jni/soundtouch/source/: Makefile.am
extensions/gdx-audio/jni/soundtouch/source/SoundStretch/: Makefile.am  RunParameters.cpp  RunParameters.h  WavFile.cpp  WavFile.h  main.cpp  soundstretch.dsp  soundstretch.dsw  soundstretch.sln  soundstretch.vcproj
extensions/gdx-audio/jni/soundtouch/source/SoundTouch/: AAFilter.cpp  AAFilter.h  BPMDetect.cpp  FIFOSampleBuffer.cpp  FIRFilter.cpp  FIRFilter.h  Makefile.am  PeakFinder.cpp  PeakFinder.h  RateTransposer.cpp  RateTransposer.h  SoundTouch.cpp  SoundTouch.dsp  SoundTouch.dsw  SoundTouch.sln  SoundTouch.vcproj  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86.cpp  mmx_optimized.cpp  sse_optimized.cpp
extensions/gdx-audio/jni/soundtouch/source/SoundTouchDLL/: SoundTouchDLL.cpp  SoundTouchDLL.h  SoundTouchDLL.pas  SoundTouchDLL.rc  SoundTouchDLL.sln  SoundTouchDLL.vcproj  resource.h
extensions/gdx-bullet/jni/src/MiniCL/: CMakeLists.txt  MiniCL.cpp  MiniCLTaskScheduler.cpp  MiniCLTaskScheduler.h  cl.h  cl_MiniCL_Defs.h  cl_gl.h  cl_platform.h
extensions/gdx-bullet/jni/src/MiniCL/MiniCLTask/: MiniCLTask.cpp  MiniCLTask.h
extensions/gdx-bullet/jni/src/bullet/: CMakeLists.txt  Makefile.am  README  btBulletCollisionCommon.h  btBulletDynamicsCommon.h
extensions/gdx-bullet/jni/src/bullet/BulletCollision/: CMakeLists.txt  premake4.lua
extensions/gdx-bullet/jni/src/bullet/BulletDynamics/: CMakeLists.txt  premake4.lua
extensions/gdx-bullet/jni/src/bullet/MiniCL/: cl.h  (+4 more)
extensions/gdx-controllers/gdx-controllers-desktop/jni/ois-v1-3/: ReadMe.txt  configure.ac
extensions/gdx-controllers/gdx-controllers-desktop/jni/ois-v1-4svn/: Makefile.am  OIS.pc.in  ReadMe.txt  acinclude.m4  bootstrap  cocoa.diff  configure.ac
extensions/gdx-freetype/jni/freetype-2.5.5/: CMakeLists.txt  ChangeLog  ChangeLog.20  ChangeLog.21  ChangeLog.22  ChangeLog.23  ChangeLog.24  Jamfile  Makefile  README  README.git  autogen.sh  configure  modules.cfg  version.sed  vms_make.com
extensions/gdx-freetype/jni/freetype-2.5.5/builds/: detect.mk  exports.mk  freetype.mk  link_dos.mk  modules.mk  toplevel.mk
extensions/gdx-freetype/jni/freetype-2.5.5/devel/: ft2build.h  ftoption.h
extensions/gdx-freetype/jni/freetype-2.5.5/docs/: CHANGES  CMAKE  CUSTOMIZE  DEBUG  FTL.TXT  GPLv2.TXT  INSTALL  INSTALL.ANY  INSTALL.CROSS  INSTALL.GNU  INSTALL.UNIX  INSTALL.VMS  LICENSE.TXT  MAKEPP  PROBLEMS  TODO  formats.txt  freetype-config.1  raster.txt  release
extensions/gdx-freetype/jni/freetype-2.5.5/include/: freetype.h  ft2build.h  ftadvanc.h  ftautoh.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcffdrv.h  ftchapters.h  ftcid.h  fterrdef.h  fterrors.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  fttrigon.h  ftttdrv.h  fttypes.h  ftwinfnt.h  (+6 more)
extensions/gdx-freetype/jni/freetype-2.5.5/objs/: README
extensions/gdx-freetype/jni/freetype-2.5.5/src/: Jamfile
extensions/gdx-freetype/jni/freetype-2.9.1/: CMakeLists.txt  ChangeLog  ChangeLog.20  ChangeLog.21  ChangeLog.22  ChangeLog.23  ChangeLog.24  ChangeLog.25  ChangeLog.26  ChangeLog.27  ChangeLog.28  Jamfile  Jamrules  Makefile  README  README.git  autogen.sh  configure  modules.cfg  vms_make.com
extensions/gdx-freetype/jni/freetype-2.9.1/builds/: detect.mk  exports.mk  freetype.mk  link_dos.mk  link_std.mk  modules.mk  toplevel.mk
extensions/gdx-freetype/jni/freetype-2.9.1/devel/: ft2build.h  ftoption.h
extensions/gdx-freetype/jni/freetype-2.9.1/docs/: CHANGES  CUSTOMIZE  DEBUG  INSTALL  INSTALL.ANY  INSTALL.CROSS  INSTALL.GNU  INSTALL.UNIX  INSTALL.VMS  MAKEPP  TODO  VERSIONS.TXT  formats.txt  freetype-config.1  raster.txt  release
extensions/gdx-freetype/jni/freetype-2.9.1/src/: Jamfile
gdx/jni/libwebp/dec/: Makefile.am  Makefile.in  idec.c  vp8i.h  vp8l.c
gdx/jni/libwebp/dsp/: Makefile.am  Makefile.in  cpu.c  dec.c  dec_sse2.c  dec_sse41.c  dsp.h  enc.c  enc_sse2.c  enc_sse41.c  lossless.c  lossless.h  lossless_enc.c  lossless_enc_sse2.c  rescaler_sse2.c  upsampling_mips_dsp_r2.c  yuv_mips32.c  yuv_mips_dsp_r2.c  yuv_sse2.c
gdx/jni/libwebp/enc/: Makefile.am  Makefile.in  alpha.c  backward_references.c  filter.c  histogram.c  quant.c  vp8enci.h  vp8l.c  webpenc.c
gdx/jni/libwebp/utils/: Makefile.am  Makefile.in  bit_reader.c  utils.h
(+15597 files in other folders)
